--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -21,3 +21,20 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
     height: 70px;
     overflow: hidden;
 }
+
+.paginate_button {
+    margin-top: .25rem;
+    padding: .25em .65em
+}
+
+.paginate_button:hover {
+    cursor: pointer;
+}
+
+.paginate_button.current, .paginate_button.current:hover {
+    color: #fff !important;
+    border: 1px solid #2196f3;
+    border-radius: 6px;
+    background: #2196f3;
+    box-shadow: 0 0 8px 0 #2196f3
+}
